<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">众行</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="headline">登录</string>
    <string name="error">系统出错,请与开发者联系！姚文华,18101893693</string>
    <string name="personal_name">姓名</string>
    <string name="personal_company">公司:</string>
    <string name="personal_type">车队:</string>
    <string name="personal_car">使用车辆:</string>
    <string name="title_personal">个人信息</string>
    <string name="history_time">请选择时间:</string>
    <string name="title_history">历史信息</string>
    <string name="psw_original">请输入原密码:</string>
    <string name="psw_new">请输入新密码:</string>
    <string name="psw_new_ag">再次输入密码:</string>
    <string name="title_password">密码修改</string>
    <string name="psw_confirm">确认修改</string>
    <string name="personal_worknum">工号:</string>
    <string name="personal_post">岗位:</string>
    <string name="str_extrawords">输入附加信息</string>
    <string name="str_checkdevice">检查设备</string>
    <string name="str_open">打开蓝牙</string>
    <string name="str_close">关闭蓝牙</string>
    <string name="str_matched">查看配对设备</string>
    <string name="str_order">字体大小</string>
    <string name="str_scan">扫描设备</string>
    <string name="str_printword">打印文字</string>
    <string name="str_disconnect">断开连接</string>
    <string name="str_device">蓝牙设备</string>
    <string name="str_scaning">正在扫描</string>
    <string name="str_unconnected">未连接!</string>
    <string name="str_succonnect">连接成功!</string>
    <string name="str_faileconnect">连接失败!</string>
    <string name="str_lose">丢失连接!</string>
    <string name="str_devecehasblue">有蓝牙设备!</string>
    <string name="str_nomatched">没有匹配设备!</string>
    <string name="str_connected">已连接</string>
    <string name="str_disconnected">没有连接</string>
    <string name="str_connecting">正在连接</string>
    <string name="str_hasnodevice">没有蓝牙设备!</string>
    <string name="str_scanover">扫描完毕!</string>
    <string name="chose">请选择</string>
    <string name="str_noinitdevice">没有可用的打印机，请重新选择！</string>
    <string name="str_initdevicefail">连接打印机失败</string>
    <string name="str_initdeviceok">连接打印机成功</string>
    <string name="str_closed">蓝牙没有打开</string>
    <string name="str_printfail">打印失败，请重新连接打印机！</string>
    <string name="str_printok">路单打印完成！</string>
    <string name="str_notice_alterpay">修正金额大于路单总价,请确认输入</string>
    <string name="str_routebegin">请填写起始路码</string>
    <string name="str_routeend">请填写结束路码</string>
    <string name="str_next">填写下一步</string>
    <string name="str_confirmbegin">确认并开始业务</string>
    <string name="str_notice_emptypas">密码不能为空</string>
    <string name="str_routecontinue">请填写当前路码</string>
    <string name="str_notecontinue">继续本次业务</string>
    <string name="str_notice_emptyroute">路码不能为空</string>
    <string name="str_notice_lessroute">结束路码小于起始路码，请确认输入</string>
    <string name="str_confirm">确认</string>
    <string name="str_hour">小时</string>
    <string name="str_mile">公里</string>
    <string name="str_yes">是</string>
    <string name="str_no">否</string>
    <string name="str_yuan">元</string>
    <string name="str_pause">暂停业务</string>
    <string name="str_sure">确定</string>
    <string name="str_cancel">取消</string>
    <string name="str_route_in">请填写进场路码</string>
    <string name="str_route_out">请填写出场路码</string>
    <string name="str_version_title">程序有更新,是否立即更新？</string>
    <string name="str_finished">已完成</string>
    <string name="str_paused">暂停中</string>
    <string name="str_new">新增</string>
    <string name="str_alter">修改</string>
    <string name="version_havenew">程序有更新,是否立即更新？</string>
    <string name="add_pay">添加费用</string>
    <string name="total_pay">合计费用</string>
    <string name="pay_brige">路桥费:</string>
    
    
    
   

</resources>