<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".BlueToothManage">
    <RelativeLayout
        android:layout_width="match_parent" 
        android:layout_height="50dp" 
        android:background="@drawable/bg_red" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="24dp"
            android:textColor="#ffffff"
            android:text="打印设置" />

        <ImageView
            android:id="@+id/return_bluetooth"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/menu" />
        <ImageView
            android:id="@+id/home_bluetooth"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/home" />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:gravity="right" />

    <ImageView
        android:id="@+id/iv_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_checkdevice"/>

        <Button
            android:id="@+id/bt_openclose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_open" />

        <Button
            android:id="@+id/bt_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_scan" />

    </LinearLayout>

    <!-- LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="56dp"
            android:layout_height="50dp"
            android:layout_weight="0.01" />

        <Button
            android:id="@+id/bt_openpci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_openimg" />

        <Button
            android:id="@+id/bt_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_printimg" />
    </LinearLayout-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <!-- Button
            android:id="@+id/bt_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_createbar" />

        <Button
            android:id="@+id/bt_2d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_create2d" /-->

        <Button
            android:id="@+id/bt_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_printword" />

        <!-- Button
            android:id="@+id/btnUnicode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_printunicode" /-->

        <Button
            android:id="@+id/bt_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_disconnect" />

        <Button
            android:id="@+id/bt_matches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_matched" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/darker_gray"
            android:gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/str_device" />

            <LinearLayout
                android:id="@+id/layoutscan"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/str_scaning" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/lv_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            />
    </LinearLayout>
</LinearLayout>