<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_red" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="24dp"
            android:textColor="#ffffff"
            android:text="@string/add_pay" />

        <ImageView
            android:id="@+id/return_addPay"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/return_icon" />
    </RelativeLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
	<RelativeLayout
	    android:id="@+id/layout_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp" >

         <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/total_pay"
            android:textScaleX="0.9"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/pay_tv_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:text="100"
            android:textScaleX="0.9"
            android:textSize="16dp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp" >

        <EditText
            android:id="@+id/pay_road"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:textSize="16dp" >
        </EditText>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/pay_brige"
            android:textScaleX="0.9"
            android:textSize="16dp" />

    </RelativeLayout>
     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="60dp" >

        <EditText
            android:id="@+id/pay_parking"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="停车费:"
            android:textScaleX="0.9"
            android:textSize="16dp" />

    </RelativeLayout>
     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="60dp" >

        <EditText
            android:id="@+id/pay_eat"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="餐    费:"
            android:textScaleX="0.9"
            android:textSize="16dp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="60dp" >

        <EditText
            android:id="@+id/pay_hotel"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="住宿费:"
            android:textScaleX="0.9"
            android:textSize="16dp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="60dp" >

        <EditText
            android:id="@+id/pay_other"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="其    他:"
            android:textScaleX="0.9"
            android:textSize="16dp" />

    </RelativeLayout>
    <ImageView android:id="@+id/imageView4" android:layout_width="match_parent" android:layout_height="1dp" 
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="visible"
         android:background="#000000"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="60dp" >

        <EditText
            android:id="@+id/price_alter"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="费用修正:"
            android:textScaleX="0.9"
            android:textSize="16dp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="60dp" >

        <EditText
            android:id="@+id/route_on"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:gravity="right"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="上车路码: "
            android:textScaleX="0.9"
            android:textSize="16dp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="60dp" >

        <EditText
            android:id="@+id/route_off"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:gravity="right"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="下车路码: "
            android:textScaleX="0.9"
            android:textSize="16dp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="60dp" >

        <EditText
            android:id="@+id/record"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="left"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="营运记录: "
            android:textScaleX="0.9"
            android:textSize="16dp" />

    </RelativeLayout>
    </LinearLayout>
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_red" >

        <TextView
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="确认保存"
            android:textColor="#ffffff"
            android:textSize="20dp" />

    </RelativeLayout>
    

</LinearLayout>
